   • Add Patreon, GitHub, and website links to about box
   **• Re-add themes
   • Adding, removing, renaming, and changing the order of pages are all *much* faster
   • Pages are now inserted after the current page, not at the end of the notebook
   • Smaller sidebar that has been split into two tabs: pages and notebook info
   • Move sidebar to the left side
   • Improved splash screen
   • Major refactoring to have a more consistent naming scheme and remove old junk
   • Bug Fix: Old Language Pad 4.x-5.x files could not be opened
   • Bug Fix: Fix bad performance when changing font styles on a page that has large images 
   • Bug Fix: Word count wouldn't update automatically when opening a new file
   • Bug Fix: Pages with the same name couldn't be imported without changing the name
   • Bug Fix: Undo/redo would sometimes leave text selected incorrectly
   • Bug Fix: The bar above on affricate buttons in the character editor could sometimes be clipped off
   • Bug Fix: Minor alignment issue on color panel with one button
   • Bug Fix: Encoding on exported HTML pages wasn't UTF-8 by default in some browsers
   • Bug Fix: Invalid files opened with the open file dialog are now handled properly
   
﻿Version 10.0 (April 8, 2020)
   • Full HiDPI support
   • Use Taiga icon pack
   • Add option in settings to load character editor on startup
   • Update to .NET Framework 4.8
   • Updated app icon
   • Remember display font chosen by user on dictionary window
   • Launch character editor to right of main window on startup
   • Character editor can now be used on text boxes in properties panel
   • Character editor context menu now matches application theme
   • Duplicate pages now have the source page's title by default
   • Export to new Thorn Writer format
   • Export pages to HTML
   • Bug Fix: Creating a new notebook wouldn't clear words from the last file's dictionary